--- a/scss/_recipe_individual.scss
+++ b/scss/_recipe_individual.scss
@@ -163,8 +163,8 @@
     }
 
     .recipe-ingredients{
-      grid-column: 1 / 2 span;
-      grid-row: 2;
+      //grid-column: 1 / 2 span;
+      //grid-row: 2;
       .select-item {
         padding-left:0px;
         margin-right: 0px;
